--- a/source/_posts/2012-07-25-a-new-blog.markdown
+++ b/source/_posts/2012-07-25-a-new-blog.markdown
@@ -17,12 +17,15 @@ question of language: writing in Portuguese I reach people around me more easily
 of the ongoing global exchange of information about computing.
 
 But the paradox is that I found out that with so many blogs, I was writing less often.
-Having posts spread all over the place makes it more difficult to
-manage an online presence. After spending some time writing about a subject, it gets awkward to post in another
-blog that looks abandoned.
+Having posts spread all over the place makes it more difficult to manage an online presence.
 
-So I've decided to experiment with having a single, default place to write about any subject that raises my interest
-at any given time. I've also decided to write mostly in English. The Brazilians that value their career in computing
+<!-- more -->
+
+After spending some time writing about a subject, it gets awkward to post in another
+blog that looks abandoned. So I've decided to experiment with having a single, default place to write about any
+subject that raises my interest at any given time.
+
+I've also decided to write mostly in English. The Brazilians that value their career in computing
 know that they need to be able to read English proficiently. After all, English is the lingua franca of Computer
 Science. And Google Translator is getting surprisingly accurate...
 
